Version 7.3
===========

New Features and Enhancements
-----------------------------
* Extended CWebBrowser
	The CWebBrower class has been extended to wrap the member functions of 
	iWebBrowser2. The Browser sample has been updated and now supports
	Copy/Paste.

* Added the following controls
   - CDateTime
   - CHeader
   - CHotKey
   - CIPAddress   
   - CMonthCalendar
   - CTooltip
   
* CString constructors now accept either ANSI or Unicode characters and converts 
   these to TCHAR as required.
   
* Extended CDC
	The CDC::DetachBitmap function has been added. This provides a convenient
	way of detaching a bitmap from a memory DC by CDC::CreateCompatibleBitmap.
	The various CDC::CreateXXX functions now return void instead of a pointer
	to the old GDI object. 
	

Changes in detail
-----------------
- Added 	CDateTime
- Added 	CHeader
- Added		CHotKey
- Added 	CIPAddress
- Added 	CMonthCalendar
- Added 	CTooltip

- Added		wndTop					a special CWnd for use with SetWindowPos
- Added		wndTopMost				a special CWnd for use with SetWindowPos
- Added		wndNoTopMost			a special CWnd for use with SetWindowPos
- Added		wndBottom				a special CWnd for use with SetWindowPos

- Added     CDC::DetachBitmap
- Added 	CGDIObject::DeleteObject
- Added 	CString::CString(LPCSTR pszText);
- Added 	CString::CString(LPCWSTR pszText);
- Added		CString::operator += (LPCSTR szText)
- Added 	CString::operator += (LPCWSTR szText)
- Added     CReBar::SetToolTips
- Added 	CWebBrowser::ExecWB
- Added 	CWebBrowser::GetApplication
- Added 	CWebBrowser::GetBusy
- Added 	CWebBrowser::GetContainer
- Added 	CWebBrowser::GetFullScreen
- Added 	CWebBrowser::GetHeight
- Added 	CWebBrowser::GetLeft
- Added 	CWebBrowser::GetLocationName
- Added 	CWebBrowser::GetLocationURL
- Added 	CWebBrowser::GetOffline
- Added 	CWebBrowser::GetProperty		
- Added 	CWebBrowser::GetReadyState
- Added 	CWebBrowser::GetRegisterAsBrowser
- Added 	CWebBrowser::GetTheaterMode
- Added 	CWebBrowser::GetTop